@@ -1,3 +1,8 @@
+Thu Feb 11 23:56:18 1999  George Lebl  <jirka@5z.com>
+
+	* gnome-dentry.c,gnome-url.c: use gnome_config_sync_file instead of
+	  gnome_config_sync
+
 1999-02-10  Miguel de Icaza  <miguel@nuclecu.unam.mx>
 
 	* gnome-metadata.c (app_get_by_type): Do not try to lookup the
